@@ -377,7 +377,9 @@ namespace utility
 	Glib::ustring get_stripped_text(const Glib::ustring &text)
 	{
 		// pattern for tags like <i>, </i>, {\comment}, etc.
-		static Glib::RefPtr<Glib::Regex> tag_pattern = Glib::Regex::create("<.*?>|{.*?}");
+		// or space
+		static bool ignore_space = Config::getInstance().get_value_bool("timing", "ignore-space");
+		static Glib::RefPtr<Glib::Regex> tag_pattern = ignore_space ? Glib::Regex::create("<.*?>|{.*?}| ") :  Glib::Regex::create("<.*?>|{.*?}");
 
 		return tag_pattern->replace(text, 0, "", static_cast<Glib::RegexMatchFlags>(0));
 	}
